--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
   # Workflow App + Dapr sidecar
   ############################
   workflow-app:
+    environment:
+      - DAPR_HTTP_PORT=3500
+      - DAPR_GRPC_PORT=4001
     build:
       context: .
       dockerfile: Workflow/Dockerfile
     ports:
-      - "5111:5111"
-      - "3500:3500"
+      - "3500:3500" # only important so we can reach the sidecar from the host for testing purposes
     depends_on:
       - redis
       - placement
@@ -23,7 +25,7 @@ services:
      "-dapr-http-port", "3500",
      "-placement-host-address", "placement:50006",
      "-dapr-grpc-port", "4001",
-     "-components-path", "/components",
+     "-resources-path", "/components",
      "-log-level","debug"]
     volumes:
         - "./components/:/components"
@@ -36,12 +38,12 @@ services:
   client-app:
     environment:
       - DAPR_HTTP_PORT=3501
+      - DAPR_GRPC_PORT=4002
     build:
       context: .
       dockerfile: Client/Dockerfile
     ports:
       - "5112:5111"
-      - "3501:3501"
     networks:
       - network
   client-dapr:
@@ -51,7 +53,10 @@ services:
     "-app-port", "5111",
     "-dapr-http-port", "3501",
     "-dapr-grpc-port", "4002",
+    "-resources-path", "/components",
     "-log-level","debug"]
+    volumes:
+      - "./components/:/components"
     depends_on:
       - client-app
     network_mode: "service:client-app"
