--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapr.Client" Version="1.11.0-rc01" />
-    <PackageReference Include="Dapr.Workflow" Version="1.11.0-rc01" />
+    <PackageReference Include="Dapr.Client" Version="1.11.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.11.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
