--- a/components/statestore.yaml
+++ b/components/statestore.yaml
@@ -7,7 +7,7 @@ spec:
   version: v1
   metadata:
   - name: redisHost
-    value: redis:6379
+    value: redis-4-state:6379
   - name: redisPassword
     value: ""
   - name: actorStateStore
