--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     ports:
       - "3500:3500" # only important so we can reach the sidecar from the host for testing purposes
     depends_on:
-      - redis
+      - redis-4-state
+      - redis-4-pubsub
       - placement
     networks:
       - network
@@ -45,6 +46,9 @@ services:
     ports:
       - "5112:5111"
       - "3501:3501"
+    depends_on:
+      - redis-4-state
+      - redis-4-pubsub
     networks:
       - network
   client-dapr:
@@ -74,10 +78,15 @@ services:
   ############################
   # Redis state store
   ############################
-  redis:
+  redis-4-state:
     image: "redis:alpine"
-    ports:
-      - "6380:6379"
+    networks:
+      - network
+  ############################
+  # Redis state store
+  ############################
+  redis-4-pubsub:
+    image: "redis:alpine"
     networks:
       - network
 networks:
