--- a/components/statestore-redis.yaml
+++ b/components/statestore-redis.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: statestore
+  name: statestore-redis
 spec:
   type: state.redis
   version: v1
@@ -10,5 +10,5 @@ spec:
     value: redis-4-state:6379
   - name: redisPassword
     value: ""
-  - name: actorStateStore
-    value: "true"
+  #- name: actorStateStore
+  #  value: "true"
