--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,13 +28,13 @@ services:
     networks:
       - network
   workflow-dapr:
-    image: "daprio/daprd:1.11.2-mariner-linux-arm64"
+    image: "daprio/daprd:nightly-2023-08-12-mariner-linux-arm64"
     command: ["./daprd",
      "-app-id", "workflow",
      "-app-port", "5111",
      "-placement-host-address", "placement:50006",
      "-resources-path", "/components",
-     "-log-level","info"]
+     "-log-level","warn"]
     volumes:
         - "./components/:/components"
     depends_on:
@@ -59,7 +59,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.11.2-mariner-linux-arm64"
+    image: "daprio/daprd:nightly-2023-08-12-mariner-linux-arm64"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -77,7 +77,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.11.2-mariner-linux-arm64"
+    image: "daprio/dapr:nightly-2023-08-12-mariner-linux-arm64"
     command: ["./placement", "-port", "50006"]
     ports:
       - "50006:50006"
@@ -88,6 +88,8 @@ services:
   ############################
   redis-4-state:
     image: "redis:alpine"
+    ports:
+      - "1235:6379"
     networks:
       - network
   ############################
