--- a/compose.yml
+++ b/compose.yml
@@ -17,12 +17,12 @@ services:
   ############################
   workflow-app:
     environment:
-      - DAPR_GRPC_PORT=50001
+      - DAPR_GRPC_PORT=50001 # we have to force the port otherwise it doesn't get picked up due to a bug in the durabletask-go library
     build:
       context: .
       dockerfile: Workflow/Dockerfile
     ports:
-      - "3500:3500" # only important so we can reach the sidecar from the host for testing purposes
+      - "3500:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
     depends_on:
       - placement
     networks:
@@ -34,7 +34,7 @@ services:
      "-app-port", "5111",
      "-placement-host-address", "placement:50006",
      "-resources-path", "/components",
-     "-log-level","warn"]
+     "-log-level","info"]
     volumes:
         - "./components/:/components"
     depends_on:
