--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,8 +17,8 @@
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
                 "ASPNETCORE_URLS": "http://localhost:5111",
-                "DAPR-HTTP-PORT": "3500",
-                "DAPR-GRPC-PORT": "4001"
+                "DAPR_HTTP_PORT": "3500",
+                "DAPR_GRPC_PORT": "50001"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
