refactored to give a better default `docker compose up` experience

--- a/compose.debug-workflow-app.yml
+++ b/compose.debug-workflow-app.yml
@@ -1,30 +1,21 @@
 version: '3.4'
 services:
-  workflow-dapr-debug:
+  workflow-app: #isolate the workflow-app by removing its ports and taking it off the network
+    ports: !reset 
+      - "9999:9999"
+    networks: !reset
+      - ""
+  workflow-dapr:
     image: "daprio/daprd:nightly-2023-08-12-mariner-linux-arm64"
     command: ["./daprd",
      "-app-id", "workflow",
-     "-app-channel-address", "host.docker.internal",
      "-app-port", "5111",
-     "-dapr-http-port", "3500",
      "-placement-host-address", "placement:50006",
      "-resources-path", "/components",
-     "-log-level","info"]
-    volumes:
-        - "./components/:/components"
-    ports:
-      - "3500:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
-      - "50001:50001" # only important so we can run the 'workflow app' locally outside of compose if we want to
-    depends_on:
-      postgres-db:
-        condition: service_started
-      kafka:
-        condition: service_healthy
-      redis-4-state:
-        condition: service_started
-      redis-4-pubsub:
-        condition: service_started
-    networks:
+     "-app-channel-address", "host.docker.internal"] # make the sidecar look on the host for the App Channel
+    network_mode: !reset "" # reset the network_mode...
+    networks: # ... so that we can put the sidecar onto the normal network
       - network
-    profiles:
-      - debug-workflow-app
+    ports:
+      - "3500:3500" # Expose the HTTP port to the host
+      - "50001:50001" # Expose the GRPC port to the host (Dapr Worfklows depends upon the GRPC channel)
