--- a/compose.yml
+++ b/compose.yml
@@ -28,7 +28,7 @@ services:
     networks:
       - network
   workflow-dapr:
-    image: "daprio/daprd:nightly-2023-08-12-mariner-linux-arm64"
+    image: "daprio/daprd:1.11.2-mariner-linux-arm64"
     command: ["./daprd",
      "-app-id", "workflow",
      "-app-port", "5111",
@@ -58,7 +58,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:nightly-2023-08-12-mariner-linux-arm64"
+    image: "daprio/daprd:1.11.2-mariner-linux-arm64"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -76,7 +76,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:nightly-2023-08-12-mariner-linux-arm64"
+    image: "daprio/dapr:1.11.2-mariner-linux-arm64"
     command: ["./placement", "-port", "50006"]
     networks:
       - network
