--- a/compose.yml
+++ b/compose.yml
@@ -28,7 +28,7 @@ services:
     networks:
       - network
   workflow-dapr:
-    image: "daprio/daprd:1.11.2-mariner-linux-arm64"
+    image: "daprio/daprd:1.11.3-mariner-linux-arm64"
     command: ["./daprd",
      "-app-id", "workflow",
      "-app-port", "5111",
@@ -47,6 +47,41 @@ services:
         condition: service_started
     network_mode: "service:workflow-app"
   ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app2:
+    environment:
+      - DAPR_GRPC_PORT=50002 # we have to force the port on the SDK due to bug https://github.com/dapr/dotnet-sdk/issues/1125
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr2:
+    image: "daprio/daprd:1.11.3-mariner-linux-arm64"
+    command: ["./daprd",
+     "-app-id", "workflow",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50002",
+     "-placement-host-address", "placement:50006",
+     "-resources-path", "/components"]
+    volumes:
+        - "./components/:/components"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+      redis-4-state:
+        condition: service_started
+      redis-4-pubsub:
+        condition: service_started
+    network_mode: "service:workflow-app2"
+  ############################
   # Client App + Dapr sidecar
   ############################
   client-app:
@@ -58,7 +93,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.11.2-mariner-linux-arm64"
+    image: "daprio/daprd:1.11.3-mariner-linux-arm64"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -76,7 +111,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.11.2-mariner-linux-arm64"
+    image: "daprio/dapr:1.11.3-mariner-linux-arm64"
     command: ["./placement", "-port", "50006"]
     networks:
       - network
@@ -137,6 +172,22 @@ services:
       KAFKA_LOG4J_ROOT_LOGLEVEL: ERROR
       KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
       KAFKA_JMX_PORT: 9997
+      KAFKA_NUM_PARTITIONS: 4
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - 8080:8080
+    depends_on:
+      - kafka
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
+      KAFKA_CLUSTERS_0_METRICS_PORT: 9997
+      KAFKA_CLUSTERS_0_AUDIT_TOPICAUDITENABLED: 'true'
+      KAFKA_CLUSTERS_0_AUDIT_CONSOLEAUDITENABLED: 'true'
+    networks:
+      - network
 networks:
   network:
 volumes:
