updated to latest 1.12 rc2

--- a/components/statestore-pg.yaml
+++ b/components/statestore-pg.yaml
@@ -25,5 +25,5 @@ spec:
   #- name: connectionMaxIdleTime
   #  value: 0
   # Uncomment this if you wish to use PostgreSQL as a state store for actors (optional)
-  #- name: actorStateStore
-  #  value: "true"
+  - name: actorStateStore
+    value: "true"
