--- a/compose.yml
+++ b/compose.yml
@@ -23,12 +23,13 @@ services:
       dockerfile: Workflow/Dockerfile
     ports:
       - "3500:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+      - "5113:5111"
     depends_on:
       - placement
     networks:
       - network
   workflow-dapr:
-    image: "daprio/daprd:1.11.3-mariner-linux-arm64"
+    image: "daprio/daprd:1.12.0-rc.2-mariner-linux-arm64"
     command: ["./daprd",
      "-app-id", "workflow",
      "-app-port", "5111",
@@ -49,38 +50,38 @@ services:
   ############################
   # Workflow App + Dapr sidecar
   ############################
-  workflow-app2:
-    environment:
-      - DAPR_GRPC_PORT=50002 # we have to force the port on the SDK due to bug https://github.com/dapr/dotnet-sdk/issues/1125
-    build:
-      context: .
-      dockerfile: Workflow/Dockerfile
-    ports:
-      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
-    depends_on:
-      - placement
-    networks:
-      - network
-  workflow-dapr2:
-    image: "daprio/daprd:1.11.3-mariner-linux-arm64"
-    command: ["./daprd",
-     "-app-id", "workflow",
-     "-app-port", "5111",
-     "-dapr-grpc-port", "50002",
-     "-placement-host-address", "placement:50006",
-     "-resources-path", "/components"]
-    volumes:
-        - "./components/:/components"
-    depends_on:
-      postgres-db:
-        condition: service_started
-      kafka:
-        condition: service_healthy
-      redis-4-state:
-        condition: service_started
-      redis-4-pubsub:
-        condition: service_started
-    network_mode: "service:workflow-app2"
+  # workflow-app2:
+  #   environment:
+  #     - DAPR_GRPC_PORT=50002 # we have to force the port on the SDK due to bug https://github.com/dapr/dotnet-sdk/issues/1125
+  #   build:
+  #     context: .
+  #     dockerfile: Workflow/Dockerfile
+  #   ports:
+  #     - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+  #   depends_on:
+  #     - placement
+  #   networks:
+  #     - network
+  # workflow-dapr2:
+  #   image: "daprio/daprd:1.12.0-rc.2-mariner-linux-arm64"
+  #   command: ["./daprd",
+  #    "-app-id", "workflow",
+  #    "-app-port", "5111",
+  #    "-dapr-grpc-port", "50002",
+  #    "-placement-host-address", "placement:50006",
+  #    "-resources-path", "/components"]
+  #   volumes:
+  #       - "./components/:/components"
+  #   depends_on:
+  #     postgres-db:
+  #       condition: service_started
+  #     kafka:
+  #       condition: service_healthy
+  #     redis-4-state:
+  #       condition: service_started
+  #     redis-4-pubsub:
+  #       condition: service_started
+  #   network_mode: "service:workflow-app2"
   ############################
   # Client App + Dapr sidecar
   ############################
@@ -93,7 +94,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.11.3-mariner-linux-arm64"
+    image: "daprio/daprd:1.12.0-rc.2-mariner-linux-arm64"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -111,7 +112,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.11.3-mariner-linux-arm64"
+    image: "daprio/dapr:1.12.0-rc.2-mariner-linux-arm64"
     command: ["./placement", "-port", "50006"]
     networks:
       - network
