--- a/compose.yml
+++ b/compose.yml
@@ -15,9 +15,7 @@ services:
   ############################
   # Workflow App + Dapr sidecar
   ############################
-  workflow-app:
-    environment:
-      - DAPR_GRPC_PORT=50001 # we have to force the port on the SDK due to bug https://github.com/dapr/dotnet-sdk/issues/1125
+  workflow-app-a:
     build:
       context: .
       dockerfile: Workflow/Dockerfile
@@ -28,10 +26,10 @@ services:
       - placement
     networks:
       - network
-  workflow-dapr:
-    image: "daprio/daprd:1.12.0-rc.2-mariner-linux-arm64"
+  workflow-dapr-a:
+    image: "daprio/daprd:1.12.0"
     command: ["./daprd",
-     "-app-id", "workflow",
+     "-app-id", "workflow-a",
      "-app-port", "5111",
      "-placement-host-address", "placement:50006",
      "-resources-path", "/components"]
@@ -46,13 +44,11 @@ services:
         condition: service_started
       redis-4-pubsub:
         condition: service_started
-    network_mode: "service:workflow-app"
-  ############################
-  # Workflow App + Dapr sidecar
-  ############################
-  # workflow-app2:
-  #   environment:
-  #     - DAPR_GRPC_PORT=50002 # we have to force the port on the SDK due to bug https://github.com/dapr/dotnet-sdk/issues/1125
+    network_mode: "service:workflow-app-a"
+  # ############################
+  # # Workflow App + Dapr sidecar
+  # ############################
+  # workflow-app-b:
   #   build:
   #     context: .
   #     dockerfile: Workflow/Dockerfile
@@ -62,10 +58,10 @@ services:
   #     - placement
   #   networks:
   #     - network
-  # workflow-dapr2:
-  #   image: "daprio/daprd:1.12.0-rc.2-mariner-linux-arm64"
+  # workflow-dapr-b:
+  #   image: "daprio/daprd:1.12.0"
   #   command: ["./daprd",
-  #    "-app-id", "workflow",
+  #    "-app-id", "workflow-b",
   #    "-app-port", "5111",
   #    "-dapr-grpc-port", "50002",
   #    "-placement-host-address", "placement:50006",
@@ -81,7 +77,7 @@ services:
   #       condition: service_started
   #     redis-4-pubsub:
   #       condition: service_started
-  #   network_mode: "service:workflow-app2"
+  #   network_mode: "service:workflow-app-b"
   ############################
   # Client App + Dapr sidecar
   ############################
@@ -94,12 +90,12 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.12.0-rc.2-mariner-linux-arm64"
+    image: "daprio/daprd:1.12.0"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
     "-resources-path", "/components",
-    "-log-level","info"]
+    "-log-level","debug"]
     volumes:
       - "./components/:/components"
     depends_on:
@@ -112,7 +108,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.12.0-rc.2-mariner-linux-arm64"
+    image: "daprio/dapr:1.12.0"
     command: ["./placement", "-port", "50006"]
     networks:
       - network
@@ -173,7 +169,7 @@ services:
       KAFKA_LOG4J_ROOT_LOGLEVEL: ERROR
       KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
       KAFKA_JMX_PORT: 9997
-      KAFKA_NUM_PARTITIONS: 4
+      KAFKA_NUM_PARTITIONS: 2
   kafka-ui:
     container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
