--- a/compose.yml
+++ b/compose.yml
@@ -48,36 +48,38 @@ services:
   # ############################
   # # Workflow App + Dapr sidecar
   # ############################
-  # workflow-app-b:
-  #   build:
-  #     context: .
-  #     dockerfile: Workflow/Dockerfile
-  #   ports:
-  #     - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
-  #   depends_on:
-  #     - placement
-  #   networks:
-  #     - network
-  # workflow-dapr-b:
-  #   image: "daprio/daprd:1.12.0"
-  #   command: ["./daprd",
-  #    "-app-id", "workflow-b",
-  #    "-app-port", "5111",
-  #    "-dapr-grpc-port", "50002",
-  #    "-placement-host-address", "placement:50006",
-  #    "-resources-path", "/components"]
-  #   volumes:
-  #       - "./components/:/components"
-  #   depends_on:
-  #     postgres-db:
-  #       condition: service_started
-  #     kafka:
-  #       condition: service_healthy
-  #     redis-4-state:
-  #       condition: service_started
-  #     redis-4-pubsub:
-  #       condition: service_started
-  #   network_mode: "service:workflow-app-b"
+  workflow-app-b:
+    environment:
+      - DAPR_GRPC_PORT=50002
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-b:
+    image: "daprio/daprd:1.12.0"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50002",
+     "-placement-host-address", "placement:50006",
+     "-resources-path", "/components"]
+    volumes:
+        - "./components/:/components"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+      redis-4-state:
+        condition: service_started
+      redis-4-pubsub:
+        condition: service_started
+    network_mode: "service:workflow-app-b"
   ############################
   # Client App + Dapr sidecar
   ############################
@@ -87,6 +89,7 @@ services:
       dockerfile: Client/Dockerfile
     ports:
       - "5112:5111"
+      - "3503:3500"
     networks:
       - network
   client-dapr:
@@ -94,6 +97,7 @@ services:
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
+    "-dapr-http-port", "3500",
     "-resources-path", "/components",
     "-log-level","debug"]
     volumes:
@@ -130,8 +134,24 @@ services:
       - "1234:6379"
     networks:
       - network
+  ############################
+  # Azure SQL 
+  ############################
+  mssql:
+    image: mcr.microsoft.com/azure-sql-edge:latest
+    hostname: "mssql"
+    ports: 
+      - "1433:1433"
+    environment:
+      ACCEPT_EULA: 1
+      MSSQL_SA_PASSWORD: "BananaHelp123@"
+    networks:
+      - network
+  ############################
+  # Zookeeper 
+  ############################
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.0.4
+    image: confluentinc/cp-zookeeper:latest
     networks:
       - network
     restart: unless-stopped
@@ -144,8 +164,11 @@ services:
     volumes:
       - zookeeper_logs:/var/lib/zookeeper/log
       - zookeeper_data:/var/lib/zookeeper/data
+  ############################
+  # Kafka 
+  ############################
   kafka:
-    image: confluentinc/cp-kafka:7.0.4
+    image: confluentinc/cp-kafka:latest
     networks:
       - network
     restart: unless-stopped
@@ -169,7 +192,10 @@ services:
       KAFKA_LOG4J_ROOT_LOGLEVEL: ERROR
       KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
       KAFKA_JMX_PORT: 9997
-      KAFKA_NUM_PARTITIONS: 2
+      KAFKA_NUM_PARTITIONS: 1
+  ############################
+  # Kafka UI
+  ############################
   kafka-ui:
     container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
