--- a/compose.yml
+++ b/compose.yml
@@ -27,12 +27,13 @@ services:
     networks:
       - network
   workflow-dapr-a:
-    image: "daprio/daprd:1.12.0"
+    image: "daprio/daprd:1.12.2"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
      "-placement-host-address", "placement:50006",
-     "-resources-path", "/components"]
+     "-resources-path", "/components",
+     "-config", "/components/config.yaml"]
     volumes:
         - "./components/:/components"
     depends_on:
@@ -48,38 +49,38 @@ services:
   # ############################
   # # Workflow App + Dapr sidecar
   # ############################
-  workflow-app-b:
-    environment:
-      - DAPR_GRPC_PORT=50002
-    build:
-      context: .
-      dockerfile: Workflow/Dockerfile
-    ports:
-      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
-    depends_on:
-      - placement
-    networks:
-      - network
-  workflow-dapr-b:
-    image: "daprio/daprd:1.12.0"
-    command: ["./daprd",
-     "-app-id", "workflow-a",
-     "-app-port", "5111",
-     "-dapr-grpc-port", "50002",
-     "-placement-host-address", "placement:50006",
-     "-resources-path", "/components"]
-    volumes:
-        - "./components/:/components"
-    depends_on:
-      postgres-db:
-        condition: service_started
-      kafka:
-        condition: service_healthy
-      redis-4-state:
-        condition: service_started
-      redis-4-pubsub:
-        condition: service_started
-    network_mode: "service:workflow-app-b"
+  # workflow-app-b:
+  #   environment:
+  #     - DAPR_GRPC_PORT=50002
+  #   build:
+  #     context: .
+  #     dockerfile: Workflow/Dockerfile
+  #   ports:
+  #     - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+  #   depends_on:
+  #     - placement
+  #   networks:
+  #     - network
+  # workflow-dapr-b:
+  #   image: "daprio/daprd:1.12.2"
+  #   command: ["./daprd",
+  #    "-app-id", "workflow-a",
+  #    "-app-port", "5111",
+  #    "-dapr-grpc-port", "50002",
+  #    "-placement-host-address", "placement:50006",
+  #    "-resources-path", "/components"]
+  #   volumes:
+  #       - "./components/:/components"
+  #   depends_on:
+  #     postgres-db:
+  #       condition: service_started
+  #     kafka:
+  #       condition: service_healthy
+  #     redis-4-state:
+  #       condition: service_started
+  #     redis-4-pubsub:
+  #       condition: service_started
+  #   network_mode: "service:workflow-app-b"
   ############################
   # Client App + Dapr sidecar
   ############################
@@ -93,7 +94,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.12.0"
+    image: "daprio/daprd:1.12.2"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -112,7 +113,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.12.0"
+    image: "daprio/dapr:1.12.2"
     command: ["./placement", "-port", "50006"]
     networks:
       - network
