updated to 1.13-rc.2

--- a/components/statestore-pg.yaml
+++ b/components/statestore-pg.yaml
@@ -9,5 +9,5 @@ spec:
   # Connection string
   - name: connectionString
     value: "host=postgres-db user=postgres password=wO2VGDsMKR port=5432 database=postgres"
-  - name: actorStateStore
-    value: "true"
+  # - name: actorStateStore
+  #   value: "true"
