--- a/compose.debug-workflow-app.yml
+++ b/compose.debug-workflow-app.yml
@@ -1,12 +1,12 @@
 version: '3.4'
 services:
-  workflow-app: #isolate the workflow-app by removing its ports and taking it off the network
+  workflow-app-a: #isolate the workflow-app by removing its ports and taking it off the network
     ports: !reset []
     networks: !reset
       - ""
-  workflow-dapr:
+  workflow-dapr-a:
     command: ["./daprd",
-     "-app-id", "workflow",
+     "-app-id", "workflow-a",
      "-app-port", "5111",
      "-placement-host-address", "placement:50006",
      "-resources-path", "/components",
